--- a/index.html
+++ b/index.html
@@ -3,12 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <title>Vue email list</title>
 </head>
 <body>
     <div id="app">
-
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <div class="text-center my-5">
+                        <button class="btn btn-success">Genera mail</button>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>    
     <script src="./js/script.js" type="text/javascript"></script>
