--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div class="row">
                 <div class="col-12">
                     <div class="text-center my-5">
-                        <button class="btn btn-success">Genera mail</button>
+                        <button class="btn btn-success" @click="generateEmails()">Genera mail</button>
                     </div>
                 </div>
             </div>
