--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
             <div class="row">
                 <div class="col-12">
                     <div class="text-center my-5">
-                        <button class="btn btn-success" @click="generateEmails()">Genera mail</button>
+                        <button class="btn btn-danger" @click="generateEmails()">Genera mail</button>
                     </div>
+                    <ul class="text-center list-unstyled">
+                        <li v-for="email in emails"> {{ email }} </li>
+                    </ul>
                 </div>
             </div>
         </div>
